# openni2_ros_docker

./: Dockerfile  docker-compose.yml  entrypoint.sh
openni2_interfaces/: CMakeLists.txt  package.xml
openni2_interfaces/srv/: GetXtionImage.srv
openni2_service/: package.xml  setup.cfg  setup.py
openni2_service/launch/: openni2_image_service.launch.py
openni2_service/openni2_service/: xtion_service_client.py  xtion_service_server.py
